--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,24 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="row justify-content-center">
-    <div class="col-md-8">
-        <h1 class="mb-4 text-center">Bienvenido al Sistema de Reporte de Incidentes de Seguridad Transmilenio</h1>
-        <p class="lead text-center">Esta aplicación te permite reportar y ver incidentes de seguridad en el sistema Transmilenio.</p>
-        {% if current_user.is_authenticated %}
-        <div class="d-grid gap-2 col-md-6 mx-auto">
-            <a href="{{ url_for('report_incident') }}" class="btn btn-primary btn-lg">Reportar un Incidente</a>
-            <a href="{{ url_for('dashboard') }}" class="btn btn-secondary btn-lg">Ver Panel de Control</a>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <h1 class="mb-4 text-center">Bienvenido al Sistema de Reporte de Incidentes de Seguridad Transmilenio</h1>
+            <p class="lead text-center">Esta aplicación te permite reportar y visualizar incidentes de seguridad en el sistema Transmilenio.</p>
+            {% if current_user.is_authenticated %}
+            <div class="d-grid gap-3 col-md-8 mx-auto">
+                <a href="{{ url_for('report_incident') }}" class="btn btn-primary btn-lg">Reportar un Incidente</a>
+                <a href="{{ url_for('dashboard') }}" class="btn btn-secondary btn-lg">Ver Mapa de Incidentes</a>
+                <a href="{{ url_for('real_time_map') }}" class="btn btn-info btn-lg">Mapa en Tiempo Real</a>
+            </div>
+            {% else %}
+            <div class="d-grid gap-3 col-md-8 mx-auto">
+                <a href="{{ url_for('login') }}" class="btn btn-primary btn-lg">Iniciar Sesión</a>
+                <a href="{{ url_for('register') }}" class="btn btn-secondary btn-lg">Registrarse</a>
+            </div>
+            {% endif %}
         </div>
-        {% else %}
-        <div class="d-grid gap-2 col-md-6 mx-auto">
-            <a href="{{ url_for('login') }}" class="btn btn-primary btn-lg">Iniciar Sesión</a>
-            <a href="{{ url_for('register') }}" class="btn btn-secondary btn-lg">Registrarse</a>
-        </div>
-        {% endif %}
     </div>
 </div>
 {% endblock %}
